# RepoLens

./: .gitignore  LICENSE  README.md  __init__.py  analyzer.py  insights.py  main.py  pyproject.toml  reporter.py  requirements.txt  setup.sh  utils.py
.cursor/plans/: gitscope_cli_tool_77790d59.plan.md  repolens_tui_upgrade_c4eba189.plan.md
languages/: ar.json  en.json  es.json
tests/: __init__.py  test_analyzer.py  test_insights.py
tui/: __init__.py  app.py  components.py  stages.py  utils.py
